[package]
name = "darksteel-codegen"
description = "Rust codegen for darksteel"
license = "Apache-2.0"
keywords = ["codegen", "darksteel"]
categories = ["network-programming"]
version = "0.1.0"
authors = ["Reese van Dijk <exadyne@protonmail.com>"]
repository = "https://github.com/darksteel-rs/darksteel"
homepage = "https://github.com/darksteel-rs/darksteel"
edition = "2018"

[dependencies]
syn = "1.0"
quote = "1.0"
convert_case = "0.4"
proc-macro-error = { version = "1", default-features = false }
lazy_static = "1.2"

[lib]
proc-macro = true
